@@ -1,3 +1,13 @@
+2012-11-15  Andrey Adaikin  <aandrey@chromium.org>
+
+        Web Inspector: [WebGL] cloneNode for images with revoked Blob URIs fails
+        https://bugs.webkit.org/show_bug.cgi?id=102366
+
+        Reviewed by Vsevolod Vlasov.
+
+        * inspector/InjectedScriptCanvasModuleSource.js:
+        (.):
+
 2012-11-15  Mark Rowe  <mrowe@apple.com>
 
         Build fix.
